crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@getitem.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "first: {{ items[0] }}\nlast: {{ items[-1] }}\nname: {{ user[\"name\"] }}"
info:
  items:
    - first_item
    - middle_item
    - last_item
  user:
    name: Peter
input_file: minijinja/tests/inputs/getitem.txt
---
first: first_item
last: last_item
name: Peter

