crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@hello.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "Hello {{ name }}!"
info:
  name: World
input_file: minijinja/tests/inputs/hello.txt
---
Hello World!

