crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@if_cond.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% if value %}\n  was true\n{% endif %}"
info:
  value: 42
input_file: minijinja/tests/inputs/if_cond.txt
---

  was true


