crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@if_cond_elif.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% if value %}\n  first branch\n{% elif other_value %}\n  second branch\n{% else %}\n  else\n{% endif %}"
info:
  other_value: false
  value: false
input_file: minijinja/tests/inputs/if_cond_elif.txt
---

  else


