crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@include_choice_none.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "Before\n{% include [\"missing_template1.txt\", \"missing_template2.txt\"] %}\nAfter"
info:
  __minijinja_current_path: include_choice_none.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/include_choice_none.txt
---
!!!ERROR!!!

Error {
    kind: TemplateNotFound,
    detail: "tried to include one of multiple templates, none of which existed ('missing_template1.txt', 'missing_template2.txt')",
    name: "include_choice_none.txt",
}

template not found: tried to include one of multiple templates, none of which existed ('missing_template1.txt', 'missing_template2.txt')
(in include_choice_none.txt:2:1)
