crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@include_missing.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "Before\n{% include template %}\nAfter"
info:
  __minijinja_current_path: include_missing.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
  template: missing_template.txt
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/include_missing.txt
---
!!!ERROR!!!

Error {
    kind: TemplateNotFound,
    detail: "tried to include non-existing template 'missing_template.txt'",
    name: "include_missing.txt",
}

template not found: tried to include non-existing template 'missing_template.txt'
(in include_missing.txt:2:1)
